crates/biome_cli/tests/snapshots/main_commands_check/html_enabled_by_arg_check.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --html-formatter-enabled=true --write file.html
```

## `file.html`

```html
<!doctype html>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
