crates/biome_cli/tests/snapshots/main_commands_check/ignores_file_inside_directory.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `./.git`

```git

```

## `./.gitignore`

```gitignore

ignored/**

```

## `ignored/file1.js`

```js
array.map(sentence => sentence.split('    ')).flat();
```

## `ignored/file2.js`

```js
foo.call(); bar.call();
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  


```

# Emitted Messages

```block
internalError/fs  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! The argument --apply-unsafe is deprecated, it will be removed in the next major release. Use --write --unsafe instead.
  

```

```block
Checked 0 files in <TIME>. No fixes were applied.
```
