crates/biome_cli/tests/snapshots/main_commands_check/maximum_diagnostics.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 688
expression: redactor(content)
---
## Command

```shell
biome check check.js
```

## `check.js`

```js

for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:2:13 lint/correctness/noUnreachable ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This code is unreachable
  
   > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
       │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
   > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
   > 5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
   > 6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
   > 7 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
   > 8 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
   > 9 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
       │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    10 │ 
  

```

```block
check.js:2:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
  > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │      ^^^^
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:2:18 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
  > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                  ^^^^
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:2:30 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
  > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                              ^^^^
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:2:42 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
  > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                          ^^^^
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:2:54 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
  > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                                      ^^^^
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:2:66 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
  > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                                                  ^^^^
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:3:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │      ^^^^
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:3:18 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                  ^^^^
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:3:30 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                              ^^^^
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:3:42 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                          ^^^^
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:3:54 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                                      ^^^^
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:3:66 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                                                  ^^^^
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:4:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │      ^^^^
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:4:18 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                  ^^^^
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:4:30 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                              ^^^^
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:4:42 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                          ^^^^
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:4:54 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                                      ^^^^
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:4:66 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                                                  ^^^^
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
check.js:5:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │      ^^^^
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    7 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
The number of diagnostics exceeds the limit allowed. Use --max-diagnostics to increase it.
Diagnostics not shown: 30.
```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 50 errors.
```
